# snake-game-android

./: .android.json  .codefactor.yml  .dockerignore  .gitignore  ANDROID_BUILD.md  ANDROID_README.md  APK_BUILD_SUMMARY.md  APK_QUICK_START.md  APK_README.md  BUILD_APK_GUIDE.md  BUILD_WITHOUT_DOCKER.md  CHANGELOG.md  Dockerfile  Dockerfile.production  GITHUB_ACTIONS_GUIDE.md  GITHUB_QUICK_START.md  PGS4A_BUILD_GUIDE.md  QUICKSTART.md  README.md  SPLASH_AND_LEADERBOARD.md  STRUCTURE_COMPARISON.md  Snake Game.py  android_utils.py  build-apk.ps1  build-apk.sh  buildozer.spec  buildozer_production.spec  create_icon.py  create_splash.py  dummy_test.py  fix_whitespace.py  kivy_adapter.py  leaderboard.py  leaderboard_local.json  logging_config.py  main.py  main_android.py  metadata.txt  newrelic.ini  pygame_adapter.py  (+9 more)
.github/: # Code Citations.md
.github/workflows/: build-apk-docker.yml  build-apk-simple.yml  build-apk.yml  codefactor.yml  quality.yml
docs/: ARCHITECTURE.md
snake_game/: __init__.py
snake_game/core/: __init__.py  direction.py  events.py  game.py  state.py
snake_game/services/: __init__.py  audio.py  session.py
snake_game/ui/: __init__.py  kivy_app.py
tests/: test_core_engine.py.disabled  test_kivy_smoke.py  test_mechanics.py
